# Synus-MobileRobot

./: SynusRobot  hello.txt
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/rosapi/: DeleteParamRequest.h  DeleteParamResponse.h  GetActionServersRequest.h  GetActionServersResponse.h  GetParamNamesRequest.h  GetParamNamesResponse.h  GetParamRequest.h  GetParamResponse.h  GetTimeRequest.h  GetTimeResponse.h  HasParamRequest.h  HasParamResponse.h  MessageDetailsRequest.h  MessageDetailsResponse.h  NodeDetailsRequest.h  NodeDetailsResponse.h  NodesRequest.h  NodesResponse.h  PublishersRequest.h  PublishersResponse.h  SearchParamRequest.h  SearchParamResponse.h  ServiceHostRequest.h  ServiceHostResponse.h  ServiceNodeRequest.h  ServiceNodeResponse.h  ServiceProvidersRequest.h  ServiceProvidersResponse.h  ServiceRequestDetailsRequest.h  ServiceRequestDetailsResponse.h  ServiceResponseDetailsRequest.h  ServiceResponseDetailsResponse.h  ServiceTypeRequest.h  ServiceTypeResponse.h  ServicesForTypeRequest.h  ServicesForTypeResponse.h  ServicesRequest.h  ServicesResponse.h  SetParamRequest.h  SetParamResponse.h  (+11 more)
devel/include/rosbridge_library/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h  SendBytesRequest.h  SendBytesResponse.h  TestArrayRequestRequest.h  TestArrayRequestResponse.h  TestChar.h  TestDurationArray.h  TestEmptyRequest.h  TestEmptyResponse.h  TestHeader.h  TestHeaderArray.h  TestHeaderTwo.h  TestTimeArray.h  (+14 more)
src/synus_description/: CMakeLists.txt
src/synus_navigation/: CMakeLists.txt  package.xml
src/synus_navigation/launch/: move_base.launch  move_base_TebPlan.launch  synus_navigation.launch  synus_teb_navigation.launch
src/synus_navigation/param/: base_local_planner_params_Teb.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/synus_navigation/rviz/: synus_navigation_Teb.rviz
src/synus_odometry/: CMakeLists.txt  package.xml
src/synus_simulation/: CMakeLists.txt
src/synus_simulation/cfg/: rviz_navigation.rviz  rviz_navigation_without_robot.rviz
src/synus_simulation/cfg/carlike/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/synus_simulation/cfg/diff_drive/: local_costmap_params.yaml
src/synus_simulation/cmake/: teb_local_planner_tutorialsConfig.cmake
src/synus_simulation/launch/: dyn_obst_corridor_scenario.launch  dyn_obst_costmap_conversion.launch  sim_ackermann_in_stage.launch  sim_ackermann_in_testmap.launch  sim_ackermann_in_turtle_map.launch  sim_diff_drive_in_stage.launch  sim_diff_drive_in_stage_costmap_conversion.launch  sim_map.launch  sim_omnidir_in_stage.launch
src/synus_simulation/maps/: map_0906.yaml  testmap.pgm  testmap.yaml  turtle_map.yaml
src/synus_simulation/stage/: map_0906.world  testmap_carlike.world  turtle_map_carlike.world
src/synus_simulation/stage/robots/: carlike_robot.inc
src/synus_slam/: CMakeLists.txt
src/synus_teleop/: CMakeLists.txt
(+207 files in other folders)
