<?xml version="1.0"?>
<package format="2">
  <name>synus_navigation</name>
  <version>1.2.0</version>
  <description>
    The synus_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="kbs@synustech.com">KBS</author>
  <maintainer email="kbs@synustech.com">KBS</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>synus_bringup</exec_depend>
</package>
